--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	  subMaxLevel: 4
     }
   </script>
+  <!-- docsify原始 -->
   <script src="./js/docsify.min.js"></script>
   <!-- 圖片縮放外掛 https://github.com/francoischalifour/medium-zoom -->
   <script src="./js/zoom-image.js"></script>
